argocd/applications/default/cups.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cups-deployment
  namespace: default
  labels:
    app: cups
spec:
  replicas: 0
  selector:
    matchLabels:
      app: cups
  template:
    metadata:
      labels:
        app: cups
    spec:
      priorityClassName: cups-priority
      containers:
        - name: cups
          image: ydkn/cups:latest
          securityContext:
            privileged: true
          ports:
            - containerPort: 631
              protocol: TCP
          volumeMounts:
            - name: cups-etc
              mountPath: /etc/cups
            - name: usb
              mountPath: /dev/bus/usb
          resources:
            requests:
              memory: "32Mi"
      volumes:
        - name: cups-etc
          hostPath:
            path: /etc/cups
        - name: usb
          hostPath:
            path: /dev/bus/usb
      nodeSelector:
        cups: "true"
      tolerations:
        - operator: "Exists"
          effect: "NoSchedule"
        - operator: "Exists"
          effect: "PreferNoSchedule"
---
apiVersion: v1
kind: Service
metadata:
  name: cups-service
  namespace: default
  labels:
    app: cups
spec:
  selector:
    app: cups
  ports:
    - name: cups-http
      protocol: TCP
      port: 631
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cups-ingress
  namespace: default
spec:
  ingressClassName: nginx
  rules:
    - host: drucker.lan
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cups-service
                port:
                  number: 631
